--- a/reset_system/templates/reset_system/recommend_request.html
+++ b/reset_system/templates/reset_system/recommend_request.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content%}
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,3 +25,4 @@
 </div>
 </body>
 </html>
+{% endblock%}
