--- a/reset_system/templates/reset_system/submit_request.html
+++ b/reset_system/templates/reset_system/submit_request.html
@@ -1,22 +1,14 @@
 {% load crispy_forms_tags %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Password Reset Request</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div class="container mt-5">
-  <div class="card shadow p-4">
-    <h2 class="mb-4 text-primary">Password Reset Request</h2>
-    <form method="post">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit" class="btn btn-primary">Submit Request</button>
-    </form>
+<div >
+  <div >
+    <div class="card-body bg-light">
+     <form method="post" action="{% url 'submit_reset' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  <button type="submit" class="btn" style="background-color: #12075e; color: white;">
+    Submit Request
+  </button>
+</form>
+    </div>
   </div>
 </div>
-</body>
-</html>
