--- a/reset_system/templates/reset_system/user_requests.html
+++ b/reset_system/templates/reset_system/user_requests.html
@@ -13,7 +13,7 @@
     {% endif %}
 
     <table class="table table-hover table-striped">
-        <thead class="table-dark">
+        <thead >
             <tr>
                 <th>System</th>
                 <th>Reason</th>
