--- a/reset_system/templates/reset_system/dashboard.html
+++ b/reset_system/templates/reset_system/dashboard.html
@@ -9,7 +9,7 @@
 {% endif %}
 <div class="container mt-4">
   <div class="card shadow mt-4" style="border-left: 5px solid #12075e;">
-    <div class="card-header text-white" style="background-color: #12075e;">
+    <div class="card-header text-#12075e" >
       <h4 class="mb-0">Password Reset Request</h4>
     </div>
     <div class="card-body bg-light">
