Adding my work to git

--- a/reset_system/templates/reset_system/dashboard.html
+++ b/reset_system/templates/reset_system/dashboard.html
@@ -9,8 +9,8 @@
 {% endif %}
 <div class="container mt-4">
   <div class="card shadow mt-4" style="border-left: 5px solid #12075e;">
-    <div class="card-header text-#12075e" >
-      <h4 class="mb-0">Password Reset Request</h4>
+    <div class="card-header bg-white" >
+      <h4 class="mb-0" style="color: #12075e;">Password Reset Request</h4>
     </div>
     <div class="card-body bg-light">
       {% include 'reset_system/submit_request.html' %}
