--- a/reset_system/templates/base.html
+++ b/reset_system/templates/base.html
@@ -85,6 +85,7 @@
     {% if request.user.userprofile.is_service_desk %}
     <a href="{% url 'service_desk_dashboard' %}">📚 All Requests (Service Desk)</a>
     {% endif %}
+    <a href="{% url 'submit_ad_reset' %}">🧑‍💻 Submit Windows AD Reset (On Behalf)</a>
   </div>
 
   <!-- Main content -->
