--- a/reset_system/templates/reset_system/service_desk_dashboard.html
+++ b/reset_system/templates/reset_system/service_desk_dashboard.html
@@ -33,8 +33,14 @@
       <tbody>
         {% for req in requests %}
         <tr>
-          <td>{{ req.requestor.username }}</td>
-          <td>{{ req.get_system_display }}</td>
+          <td>{{ req.requestor.get_full_name }}</td>
+          <td>
+            {% if req.is_ad_account %}
+              Windows AD Account - {{ req.affected_name }}
+            {% else %}
+              {{ req.get_system_display }}
+              {% endif %}
+          </td>
           <td>{{ req.get_reason_display }}</td>
           <td><span class="badge bg-secondary">{{ req.get_status_display }}</span></td>
           <td>
@@ -70,7 +76,7 @@
         <a class="page-link" href="?page={{ requests.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">Previous</a>
       </li>
       {% endif %}
-      <li class="page-item active"><span class="page-link">Page {{ requests.number }} of {{ requests.paginator.num_pages }}</span></li>
+      <li class="page-item active background-color: #12075e;"><span class="page-link">Page {{ requests.number }} of {{ requests.paginator.num_pages }}</span></li>
       {% if requests.has_next %}
       <li class="page-item">
         <a class="page-link" href="?page={{ requests.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">Next</a>
