--- a/reset_system/templates/reset_system/user_requests.html
+++ b/reset_system/templates/reset_system/user_requests.html
@@ -25,7 +25,13 @@
         <tbody>
             {% for req in requests %}
                 <tr>
-                    <td>{{ req.get_system_display }}</td>
+                   <td>
+            {% if req.is_ad_account %}
+              Windows AD Account - {{ req.affected_name }}
+            {% else %}
+              {{ req.get_system_display }}
+              {% endif %}
+          </td>
                     <td>{{ req.get_reason_display }}</td>
                     <td>
                         {% if req.status == 'pending' %}
